name:                datadog
version:             0.2.0.0
synopsis:            Datadog client for Haskell.
description:         Datadog client for Haskell. Supports both the HTTP API and StatsD.
homepage:            https://github.com/iand675/datadog
license:             MIT
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
source-repository head
  type:     git
  location: git://github.com/iand675/datadog.git

library
  exposed-modules:     Network.StatsD,
                       Network.StatsD.Datadog,
                       Network.StatsD.Monad
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, TemplateHaskell, FunctionalDependencies, MultiParamTypeClasses, FlexibleInstances
  build-depends:       base >=4.7 && <5,
                       aeson,
                       lens,
                       bytestring,
                       time,
                       text,
                       buffer-builder,
                       auto-update,
                       mtl,
                       network,
                       unordered-containers,
                       vector,
                       dlist,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite datadog-api-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
  build-depends:       base,
                       Cabal,
                       datadog,
                       network,
                       time,
                       lens,
                       hspec
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -O3 -threaded -rtsopts -with-rtsopts=-N
