name:                dd-wai-middleware
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iand675/dd-middleware#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           Ian Duncan
category:            Web
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Datadog
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , clock
                     , datadog
                     , iproute
                     , mwc-random
                     , text
                     , wai
                     , vault
                     , http-types
                     , lens
                     , network
                     , unix
                     , unordered-containers

  default-language:    Haskell2010

test-suite dd-middleware-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dd-wai-middleware
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-NT"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iand675/dd-middleware
